--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>楊岳霖是天生好手</h1>
+        <h1>楊岳霖是天生好手 小笨蛋兒</h1>
         <h2></h2>
         <a href="https://github.com/yangyuelin/20160811" class="button"><small>View project on</small> GitHub</a>
       </div>
